force-app/main/default/objects/cpm__Payment_Method__c/cpm__Payment_Method__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Payment Method</label>
</CustomObject>