force-app/main/default/objects/cpm__Payment_Method__c/fields/cpm__Generate_Recurring_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Generate_Recurring_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Recurring Reference</label>
    <type>Checkbox</type>
</CustomField>