force-app/main/default/objects/cpm__Payment_Method__c/fields/cpm__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>cpm__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>