force-app/main/default/objects/cpm__Payment_Method__c/fields/cpm__Method_Default__c.field-meta.xml
<CustomField>
    <fullName>cpm__Method_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the default method. extremely usefull when having multiple of the same payment method for different PSP&apos;s</description>
    <label>Method Default</label>
    <type>Checkbox</type>
</CustomField>