force-app/main/default/objects/cpm__Payment_Method__c/fields/cpm__Payment_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Service_Provider__c</fullName>
    <label>Payment Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>