force-app/main/default/objects/cpm__Payment_Method__c/fields/cpm__Provided_By__c.field-meta.xml
<CustomField>
    <fullName>cpm__Provided_By__c</fullName>
    <description>The relation to the Setup Item. This indicates for what Extension the Payment Method is added for.</description>
    <label>Provided By</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>