force-app/main/default/objects/cpm__Payment_Method__c/fields/cpm__Support_Online__c.field-meta.xml
<CustomField>
    <fullName>cpm__Support_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value that indicates if the Payment Method supports online payments.</description>
    <label>Support Online</label>
    <type>Checkbox</type>
</CustomField>