force-app/main/default/objects/cpm__Payment_Method__c/fields/cpm__Support_Recurring__c.field-meta.xml
<CustomField>
    <fullName>cpm__Support_Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this Payment method in relation with the Processor supports Recurring Payments.</description>
    <label>Support Recurring</label>
    <type>Checkbox</type>
</CustomField>